--- a/package.json
+++ b/package.json
@@ -31,11 +31,20 @@
     "eslint": "^7.29.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "fibers": "^5.0.0",
     "jsdom": "^16.6.0",
     "jsdom-global": "^3.0.2",
     "nuxt-vite": "^0.1.3",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "require-extension-hooks": "^0.3.3",
     "require-extension-hooks-babel": "^1.0.0",
-    "require-extension-hooks-vue": "^3.0.0"
+    "require-extension-hooks-vue": "^3.0.0",
+    "sass": "^1.38.0",
+    "sass-loader": "10"
+  },
+  "comment_1": "https://github.com/nuxt/vite/issues/162",
+  "resolutions": {
+    "vite": "2.3.8"
   }
 }
