--- a/package.json
+++ b/package.json
@@ -16,15 +16,19 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.21.1",
+    "canvas-gauges": "^2.1.7",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "nuxt-buefy": "^0.4.8"
+    "nuxt-buefy": "^0.4.8",
+    "vue-google-charts": "^0.3.3",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
     "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/google-fonts": "^1.3.0",
     "@vue/test-utils": "^1.2.1",
     "ava": "^3.15.0",
     "babel-plugin-module-resolver": "^4.1.0",
