--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-buefy": "^0.4.8",
+    "nuxt-clipboard2": "^0.2.1",
     "vue-google-charts": "^0.3.3",
     "vuedraggable": "^2.24.3"
   },
