--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt-buefy": "^0.4.8",
     "nuxt-clipboard2": "^0.2.1",
     "vue-google-charts": "^0.3.3",
+    "vue-infinite-loading": "^2.4.5",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
