Building into Docker container

--- a/util/Config/config-for-juice-philcal-DOCKER.json
+++ b/util/Config/config-for-juice-philcal-DOCKER.json
@@ -1,4 +1,9 @@
 {
+  "mondat": {
+    "protocol": "http",
+    "host": "localhost",
+    "port": 33370
+  },
 	"datp": {
 		"name": "master",
 		"description": "Master DATP node",
