--- a/util/Dockerfile
+++ b/util/Dockerfile
@@ -18,6 +18,14 @@ COPY . /src
 # Generate the static Mondat site
 RUN yarn generate
 
+# Install a websiteConfig.json file that contains JuiceConfig variables,
+# so start_inside_docker_container.sh can update the variables from
+# AWS Secrets Manager. Note that this needs to happen at container
+# startup time, so changes to the config can be propagated to MONDAT
+# without rebuilding the Docker image.
+RUN mv protected-config/websiteConfig.js-withJuiceVariables protected-config/websiteConfig.js
+RUN chmod +x /src/start_inside_docker_container.sh
+
 # Now we'll run an HTTP server, to serve up the static site
 EXPOSE  3000
-CMD ["yarn", "start"]
+CMD ["bash", "/src/start_inside_docker_container.sh"]
