--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@tooltwist/juice-client": "1.0.18",
     "axios": "^0.21.1",
     "canvas-gauges": "^2.1.7",
     "core-js": "^3.15.1",
+    "esm": "^3.2.25",
     "nuxt": "^2.15.7",
     "nuxt-buefy": "^0.4.8",
     "nuxt-clipboard2": "^0.2.1",
