--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@tooltwist/juice-client": "1.0.18",
-    "axios": "^0.21.1",
+    "@tooltwist/juice-client": "1.0.20",
+    "axios": "^0.24.0",
     "canvas-gauges": "^2.1.7",
+    "chart.js": "^3.7.0",
     "core-js": "^3.15.1",
     "esm": "^3.2.25",
     "nuxt": "^2.15.7",
     "nuxt-buefy": "^0.4.8",
     "nuxt-clipboard2": "^0.2.1",
+    "vue-chartjs": "^3.5.1",
     "vue-google-charts": "^0.3.3",
     "vue-infinite-loading": "^2.4.5",
     "vuedraggable": "^2.24.3"
@@ -54,6 +56,6 @@
   },
   "comment_1": "https://github.com/nuxt/vite/issues/162",
   "resolutions": {
-    "vite": "2.3.8"
+    "vite": "2.4.4"
   }
 }
