--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
+    "@tauri-apps/cli": "^1.0.0-rc.5",
     "@vue/test-utils": "^1.2.1",
     "ava": "^3.15.0",
     "babel-plugin-module-resolver": "^4.1.0",
