--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "canvas-gauges": "^2.1.7",
     "chart.js": "^3.7.0",
     "core-js": "^3.15.1",
+    "date-fns": "^2.29.3",
     "esm": "^3.2.25",
+    "highcharts": "^10.3.0",
+    "highcharts-vue": "^1.4.0",
     "nuxt": "^2.15.7",
     "nuxt-buefy": "^0.4.8",
     "nuxt-clipboard2": "^0.2.1",
