--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mondat",
   "version": "1.0.0",
   "private": true,
+  "license": "ISC",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
