--- a/util/Config/config-for-juice-philcal-DOCKER.json
+++ b/util/Config/config-for-juice-philcal-DOCKER.json
@@ -18,14 +18,6 @@
     // "host": "localhost",
     // "port": 4000,
     //
-    "midiSupported": false,
-    "serveMondat": true
-  // },
-  // "Zdb": {
-  //   "host": "db",
-  //   "port": 3306,
-  //   "database": "datp_master",
-  //   "user": "root",
-  //   "password": ""
+    "midiSupported": false
   }
 }
